menu - fixed issue with h1 heading overlapping active menu overlay

--- a/assets/sass/_hero.scss
+++ b/assets/sass/_hero.scss
@@ -84,7 +84,7 @@ img.ys-hero-heading {
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.25);
     left: 0;
     top: 0;
   }
